[go_router] [test-exempt] Use make-deps-path-based script for analysis and tests (#2252)
* Use pub deps in go_router_builder

* use make-deps-path-based in analyze steps

* remove newline

* add make-deps-path-based for tests

* Cause go_router_builder to break, but go_router tests pass

* (test) bump go_router to 4.0.1

* Revert experimental breakage

* Revert go_router to 4.0.0

* Specify go_router_builder version in pubspec

* bump go_router_builder version

* Use path dependency overrides in example

* remove dependency overrides - unsupported by make-deps-path-based

* update go_router_builder/CHANGELOG.md

* Change go_router_builder/example pubspec to point to pub.dev

* Add separate pathified_* checks

* Update go_router_builder SDK constraints

Specify the same SDK constraints as go_router in go_router_builder

* Use path-based dependency for go_router_builder in example

* Address code review comments

* add --run-on-dirty-packages to pathified test script

* Use --run-on-changed-packages flag for analyze

* Bypass tool_runner.sh to use --run-on-dirty-packages flag

The tool_runner.sh script adds the "--packages-for-branch" flag,
which can't be used with "--run-on-dirty-packages flag"

https://github.com/flutter/packages/blob/main/script/tool_runner.sh#L12

* Remove unused _go_router_fake package

* Format .cirrus.yml, use a shared dart_unit_tests_exceptions.yaml file

* Remove redundant comment

* Update CHANGELOG.md

* Update .cirrus.yml

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -70,7 +70,19 @@ task:
       always:
         format_script: ./script/tool_runner.sh format --fail-on-change
         license_script: dart pub global run flutter_plugin_tools license-check
-        analyze_script: ./script/tool_runner.sh analyze --custom-analysis=script/configs/custom_analysis.yaml
+        analyze_script:
+          - ./script/tool_runner.sh analyze --custom-analysis=script/configs/custom_analysis.yaml
+        pathified_analyze_script:
+          # Run analysis with path-based dependencies to ensure that publishing
+          # the changes won't break analysis of other packages in the respository
+          # that depend on it.
+          - ./script/tool_runner.sh make-deps-path-based  --target-dependencies-with-non-breaking-updates 
+          # This uses --run-on-dirty-packages rather than --packages-for-branch
+          # since only the packages changed by 'make-deps-path-based' need to be
+          # checked.
+          - dart pub global run flutter_plugin_tools analyze --run-on-dirty-packages --custom-analysis=script/configs/custom_analysis.yaml
+          # Restore the tree to a clean state
+          - git checkout .
         pubspec_script: ./script/tool_runner.sh pubspec-check
         readme_script:
           - ./script/tool_runner.sh readme-check
@@ -128,9 +140,14 @@ task:
         matrix:
           CHANNEL: "master"
           CHANNEL: "stable"
-      script:
-        # We exclude flutter_image because its tests need a test server, so are run via custom_package_tests.
-        - ./script/tool_runner.sh test --exclude=flutter_image
+      unit_test_script:
+        - ./script/tool_runner.sh test --exclude=script/configs/dart_unit_tests_exceptions.yaml
+      pathified_unit_test_script:
+        # Run tests with path-based dependencies to ensure that publishing
+        # the changes won't break tests of other packages in the respository
+        # that depend on it.
+        - ./script/tool_runner.sh make-deps-path-based --target-dependencies-with-non-breaking-updates
+        - dart pub global run flutter_plugin_tools test --run-on-dirty-packages --exclude=script/configs/dart_unit_tests_exceptions.yaml
       depends_on:
         - format+analyze
     - name: linux-custom_package_tests
