--- a/packages/go_router_builder/example/pubspec.yaml
+++ b/packages/go_router_builder/example/pubspec.yaml
@@ -8,8 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # Uses path dependency override
-  go_router: any
+  go_router: ^4.0.0
   provider: ^6.0.0
 
 dev_dependencies:
@@ -18,15 +17,9 @@ dev_dependencies:
   build_verify: ^3.0.0
   flutter_test:
     sdk: flutter
-  # Uses path dependency override
   go_router_builder:
+    path: ..
   test: ^1.17.0
 
 flutter:
   uses-material-design: true
-
-dependency_overrides:
-  go_router:
-    path: ../../go_router
-  go_router_builder:
-    path: ../
