--- a/packages/go_router_builder/pubspec.yaml
+++ b/packages/go_router_builder/pubspec.yaml
@@ -2,12 +2,13 @@ name: go_router_builder
 description: >-
   A builder that supports generated strongly-typed route helpers for
   package:go_router
-version: 1.0.5
+version: 1.0.6
 repository: https://github.com/flutter/packages/tree/main/packages/go_router_builder
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+go_router_builder%22
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   analyzer: '>=2.7.0 <4.0.0'
@@ -24,11 +25,6 @@ dependencies:
 dev_dependencies:
   all_lint_rules_community: ^0.0.4
   build_runner: ^2.0.0
-  # This is a "fake" package to enable testing
-  go_router: any
+  go_router: ^4.0.0
   source_gen_test: ^1.0.0
   test: ^1.20.0
-
-dependency_overrides:
-  go_router:
-    path: _go_router_fake
