--- a/packages/standard_message_codec/pubspec.yaml
+++ b/packages/standard_message_codec/pubspec.yaml
@@ -1,6 +1,6 @@
 name: standard_message_codec
 description: An efficient and schemaless binary encoding format for Flutter and Dart.
-version: 0.0.1
+version: 0.0.1+1
 repository: https://github.com/flutter/packages/tree/main/packages/standard_message_codec
 issue_tracker:  https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3Astandard_message_codec
 
@@ -8,4 +8,4 @@ environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dev_dependencies:
-  test: ^1.11.1
+  test: ^1.16.0
