--- a/packages/adaptive_scaffold/pubspec.yaml
+++ b/packages/adaptive_scaffold/pubspec.yaml
@@ -1,6 +1,6 @@
 name: adaptive_scaffold
 description: Widgets to easily build adaptive layouts, including navigation elements.
-version: 0.0.1
+version: 0.0.1+1
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aopen+is%3Aissue+label%3A%22p%3A+adaptive_scaffold%22
 repository: https://github.com/flutter/packages/tree/main/packages/adaptive_scaffold
 # Temporarily unpublished while in process of releasing full package in multiple stages.
