--- a/packages/adaptive_scaffold/pubspec.yaml
+++ b/packages/adaptive_scaffold/pubspec.yaml
@@ -1,7 +1,7 @@
 name: adaptive_scaffold
 description: Widgets to easily build adaptive layouts, including navigation elements.
-version: 0.0.1+1
-issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aopen+is%3Aissue+label%3A%22p%3A+adaptive_scaffold%22
+version: 0.0.2
+issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+adaptive_scaffold%22
 repository: https://github.com/flutter/packages/tree/main/packages/adaptive_scaffold
 # Temporarily unpublished while in process of releasing full package in multiple stages.
 publish_to: none
@@ -13,9 +13,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  masonry_grid: ^1.0.0
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-    
+
