--- a/packages/web_benchmarks/pubspec.yaml
+++ b/packages/web_benchmarks/pubspec.yaml
@@ -2,23 +2,22 @@ name: web_benchmarks
 description: A benchmark harness for performance-testing Flutter apps in Chrome.
 repository: https://github.com/flutter/packages/tree/main/packages/web_benchmarks
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+web_benchmarks%22
-version: 0.0.7+1
+version: 0.1.0
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=2.10.0"
+  sdk: '>=2.17.0 <3.0.0'
+  flutter: ">=3.0.0"
 
-# Using +2 upper limit on some packages to allow null-safe versions
 dependencies:
   flutter:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  logging: ">=0.11.4 <2.0.0"
-  meta: ">=1.0.0 <2.0.0"
-  path: ">=1.7.0 <2.0.0"
-  process: ">=3.0.13 <5.0.0"
-  shelf: ">=0.7.5 <2.0.0"
-  shelf_static: ">=0.2.8 <2.0.0"
-  test: ">=1.15.0 <3.0.0"
-  webkit_inspection_protocol: ">=0.7.3 <2.0.0"
+  logging: ^1.0.2
+  meta: ^1.7.0
+  path: ^1.8.0
+  process: ^4.2.4
+  shelf: ^1.2.0
+  shelf_static: ^1.1.0
+  test: ^1.19.5
+  webkit_inspection_protocol: ^1.0.0
