--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -183,6 +183,9 @@ task:
     - name: android-platform_tests
       env:
         matrix:
+          PACKAGE_SHARDING: "--shardIndex 0 --shardCount 2"
+          PACKAGE_SHARDING: "--shardIndex 1 --shardCount 2"
+        matrix:
           CHANNEL: "master"
           CHANNEL: "stable"
       build_script:
