--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -261,12 +261,12 @@ task:
       local_tests_script:
         # flutter_image
         #   https://github.com/flutter/flutter/issues/100387
-        # cross_file
-        #   Custom tests need Chrome. (They run in linux-custom_package_tests)
+        # script/configs/linux_only_custom_test.yaml
+        #   Custom tests need Chrome for these packages. (They run in linux-custom_package_tests)
         - if [[ "$CHANNEL" == "master" ]]; then
-        -   ./script/tool_runner.sh custom-test --exclude=cross_file
+        -   ./script/tool_runner.sh custom-test --exclude=script/configs/linux_only_custom_test.yaml
         - else
-        -   ./script/tool_runner.sh custom-test --exclude=cross_file,flutter_image
+        -   ./script/tool_runner.sh custom-test --exclude=flutter_image,script/configs/linux_only_custom_test.yaml
         - fi
     ### macOS desktop tasks ###
     - name: macos-platform_tests
