--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -126,11 +126,6 @@ task:
       analyze_script:
         - ./script/tool_runner.sh analyze --downgrade --custom-analysis=script/configs/custom_analysis.yaml
     - name: publishable
-      env:
-        # TODO(stuartmorgan): Remove once the fix for https://github.com/dart-lang/pub/issues/3152
-        # rolls into Flutter master.
-        CHANNEL: stable
-        CHANGE_DESC: "/tmp/change-description.txt"
       version_script:
         # For pre-submit, pass the PR description to the script to allow for
         # version check overrides.
@@ -141,8 +136,7 @@ task:
         - if [[ $CIRRUS_PR == "" ]]; then
         -   ./script/tool_runner.sh version-check
         - else
-        -   echo "$CIRRUS_CHANGE_MESSAGE" > "$CHANGE_DESC"
-        -   ./script/tool_runner.sh version-check --check-for-missing-changes --change-description-file="$CHANGE_DESC" --pr-labels="$CIRRUS_PR_LABELS"
+        -   ./script/tool_runner.sh version-check --check-for-missing-changes --pr-labels="$CIRRUS_PR_LABELS"
         - fi
       publishable_script: ./script/tool_runner.sh publish-check --allow-pre-release
       depends_on:
