[pigeon] Convert run_tests.sh to Dart (#3075)
* Remove test_pigeon_android, which is unused

* Update Dart unit test output names for consistency

* Simplify unit test generation

* Fold dart analysis tests into the dart unit test system, which already does analysis

* Move Java unit tests to Dart

* Remove more dead code, consolidate slightly

* Move legacy iOS unit tests to Dart

* Move command-line tests from bash to Dart

* Move default test set to Dart; eliminate sh

* Update docs reference to script

* Fix legacy iOS test

* Disable iOS integration tests

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -191,14 +191,12 @@ task:
           CHANNEL: "stable"
       << : *INSTALL_CHROME_LINUX
       local_tests_script:
-        # pigeon tests currently don't support Linux:
-        #   https://github.com/flutter/flutter/issues/100386
         # flutter_image
         #   https://github.com/flutter/flutter/issues/100387
         - if [[ "$CHANNEL" == "master" ]]; then
-        -   ./script/tool_runner.sh custom-test --exclude=pigeon
+        -   ./script/tool_runner.sh custom-test
         - else
-        -   ./script/tool_runner.sh custom-test --exclude=pigeon,flutter_image
+        -   ./script/tool_runner.sh custom-test --exclude=flutter_image
         - fi
     ### Web tasks ###
     - name: web-build_all_packages
