--- a/packages/file_selector/file_selector_windows/pubspec.yaml
+++ b/packages/file_selector/file_selector_windows/pubspec.yaml
@@ -2,7 +2,7 @@ name: file_selector_windows
 description: Windows implementation of the file_selector plugin.
 repository: https://github.com/flutter/packages/tree/main/packages/file_selector/file_selector_windows
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+file_selector%22
-version: 0.9.1+6
+version: 0.9.1+7
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -23,8 +23,8 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  build_runner: 2.1.11
+  build_runner: ^2.3.0
   flutter_test:
     sdk: flutter
   mockito: 5.3.2
-  pigeon: ^3.2.5
+  pigeon: ^9.1.0
