[webview_flutter_android] Removes unused field `WebView.useHybridComposition` and suppress Java `ViewConstructor` lint (#3428)
[webview_flutter_android] Removes unused field `WebView.useHybridComposition` and suppress Java `ViewConstructor` lint

--- a/packages/webview_flutter/webview_flutter_android/android/build.gradle
+++ b/packages/webview_flutter/webview_flutter_android/android/build.gradle
@@ -30,6 +30,9 @@ android {
     }
 
     lintOptions {
+        // See https://sites.google.com/a/android.com/tools/tips/lint-checks for all available
+        // android lint checks.
+        error 'ViewConstructor'
         disable 'AndroidGradlePluginVersion', 'InvalidPackage', 'GradleDependency'
     }
 
