[various] Enable warnings as errors, and all warnings, for Android lint (#3648)
For all Android plugins:
- Enable all warnings for `lint`
- Treat all warnings as errors for `lint`

This significantly increases the scope of issues that we'll catch in CI. To
allow enabling this without having to make tons of fixes first, so that
we get the incremental benefit immediately, this adds new baselines for
all plugins. We can incrementally clean those baselines up over time.
(In practice we haven't prioritized that, but it would be good to start
paying down that technical debt incrementally at some point.)

See https://github.com/flutter/flutter/issues/88011

--- a/packages/camera/camera_android_camerax/android/build.gradle
+++ b/packages/camera/camera_android_camerax/android/build.gradle
@@ -49,8 +49,10 @@ android {
     }
 
     lintOptions {
-        disable 'AndroidGradlePluginVersion'
-        disable 'GradleDependency'
+        checkAllWarnings true
+        warningsAsErrors true
+        disable 'AndroidGradlePluginVersion', 'GradleDependency', 'InvalidPackage'
+        baseline file("lint-baseline.xml")
     }
 }
 
