--- a/packages/webview_flutter/webview_flutter_android/android/build.gradle
+++ b/packages/webview_flutter/webview_flutter_android/android/build.gradle
@@ -30,10 +30,10 @@ android {
     }
 
     lintOptions {
-        // See https://sites.google.com/a/android.com/tools/tips/lint-checks for all available
-        // android lint checks.
-        error 'ViewConstructor'
+        checkAllWarnings true
+        warningsAsErrors true
         disable 'AndroidGradlePluginVersion', 'InvalidPackage', 'GradleDependency'
+        baseline file("lint-baseline.xml")
     }
 
     dependencies {
