--- a/packages/camera/camera/pubspec.yaml
+++ b/packages/camera/camera/pubspec.yaml
@@ -4,7 +4,7 @@ description: A Flutter plugin for controlling the camera. Supports previewing
   Dart.
 repository: https://github.com/flutter/packages/tree/main/packages/camera/camera
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+camera%22
-version: 0.10.3+2
+version: 0.10.4
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
@@ -21,9 +21,9 @@ flutter:
         default_package: camera_web
 
 dependencies:
-  camera_android: ^0.10.1
-  camera_avfoundation: ^0.9.9
-  camera_platform_interface: ^2.3.2
+  camera_android: ^0.10.5
+  camera_avfoundation: ^0.9.13
+  camera_platform_interface: ^2.4.0
   camera_web: ^0.3.1
   flutter:
     sdk: flutter
