--- a/packages/local_auth/local_auth_android/pubspec.yaml
+++ b/packages/local_auth/local_auth_android/pubspec.yaml
@@ -2,7 +2,7 @@ name: local_auth_android
 description: Android implementation of the local_auth plugin.
 repository: https://github.com/flutter/packages/tree/main/packages/local_auth/local_auth_android
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+local_auth%22
-version: 1.0.22
+version: 1.0.23
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -25,5 +25,8 @@ dependencies:
   local_auth_platform_interface: ^1.0.1
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
+  mockito: 5.4.0
+  pigeon: ^9.2.4
