--- a/packages/quick_actions/quick_actions_android/example/android/app/build.gradle
+++ b/packages/quick_actions/quick_actions_android/example/android/app/build.gradle
@@ -27,6 +27,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 def androidXTestVersion = '1.2.0'
 
 android {
+    namespace 'io.flutter.plugins.quickactionsexample'
     compileSdkVersion flutter.compileSdkVersion
 
     lintOptions {
