[various] Update Android example min SDKs (#3847)
Updates all the example apps that had a `minSdkVersion` of 16 to instead use `flutter.compileSdkVersion`. That is 16 on stable, but now 19 on master since Flutter support for 16-18 is being fully removed.

This unblocks the roller, since example apps that depend on `integration_test` now require a minimum of 19+ on master.

--- a/packages/in_app_purchase/in_app_purchase/example/android/app/build.gradle
+++ b/packages/in_app_purchase/in_app_purchase/example/android/app/build.gradle
@@ -69,7 +69,7 @@ android {
 
     defaultConfig {
         applicationId project.APP_ID
-        minSdkVersion 16
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 28
         versionCode project.VERSION_CODE
         versionName project.VERSION_NAME
