--- a/packages/google_sign_in/google_sign_in/example/android/app/build.gradle
+++ b/packages/google_sign_in/google_sign_in/example/android/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
     defaultConfig {
         applicationId "io.flutter.plugins.googlesigninexample"
-        minSdkVersion 16
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 28
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
