--- a/packages/image_picker/image_picker_android/example/android/app/build.gradle
+++ b/packages/image_picker/image_picker_android/example/android/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
     defaultConfig {
         applicationId "io.flutter.plugins.imagepicker.example"
-        minSdkVersion 16
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 33
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
