[platform] Import the `platform` package (#4613)
Imports the `packages` platform from https://github.com/google/platform.dart
- As there is not much history in the package, this imports it as a copy instead of going through the process of actually merging the commit history of that repo into this one.
- The only changes relative to the current source in that repo are:
  - Adjustments for repo conventions (such as removing analysis_options.yaml and fixing the resulting issues).
  - Addressing https://github.com/google/platform.dart/pull/44

Part of https://github.com/flutter/flutter/issues/130915

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -30,6 +30,7 @@ packages/multicast_dns/**                                @dnfield
 packages/palette_generator/**                            @gspencergoog
 packages/path_provider/**                                @stuartmorgan
 packages/pigeon/**                                       @tarrinneal
+packages/platform/**                                     @stuartmorgan
 packages/plugin_platform_interface/**                    @stuartmorgan
 packages/pointer_interceptor/**                          @ditman
 packages/quick_actions/**                                @bparrishMines
