--- a/packages/google_identity_services_web/example/pubspec.yaml
+++ b/packages/google_identity_services_web/example/pubspec.yaml
@@ -4,15 +4,16 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  flutter: ^3.16.0
+  sdk: ^3.2.0
 
 dependencies:
   flutter:
     sdk: flutter
   google_identity_services_web:
     path: ../
-  http: ">=0.13.0 <2.0.0"
-  js: ^0.6.4
+  http: ^1.1.2
+  web: ">=0.3.0 <0.5.0"
 
 dev_dependencies:
   build_runner: ^2.1.10 # To extract README excerpts only.
