--- a/packages/linked_text/pubspec.yaml
+++ b/packages/linked_text/pubspec.yaml
@@ -1,15 +1,16 @@
 name: linked_text
-description: A starting point for Dart libraries or applications.
+description: Flutter plugin for creating links in text.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/flutter/packages/tree/main/packages/linked_text
+issue_tracker: https://github.com/flutter/flutter/issues
 
 environment:
-  sdk: ^3.4.0-14.0.dev
+  sdk: ">=3.1.0 <4.0.0"
+  flutter: ">=3.13.0"
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
-  lints: ^3.0.0
   test: ^1.24.0
