[local_auth]: Renamed `local_auth_ios` to `local_auth_darwin` (#5809)
Renames `local_auth_ios` to `local_auth_darwin`

resolves https://github.com/flutter/flutter/issues/141020

*If you had to change anything in the [flutter/tests] repo, include a link to the migration guide as per the [breaking change policy].*

--- a/packages/local_auth/local_auth_darwin/example/pubspec.yaml
+++ b/packages/local_auth/local_auth_darwin/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: local_auth_ios_example
-description: Demonstrates how to use the local_auth_ios plugin.
+name: local_auth_darwin_example
+description: Demonstrates how to use the local_auth_darwin plugin.
 publish_to: none
 
 environment:
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  local_auth_ios:
+  local_auth_darwin:
     # When depending on this package from a real application you should use:
-    #   local_auth: ^x.y.z
+    #   local_auth_darwin: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
