--- a/packages/local_auth/local_auth_darwin/pubspec.yaml
+++ b/packages/local_auth/local_auth_darwin/pubspec.yaml
@@ -1,8 +1,8 @@
-name: local_auth_ios
+name: local_auth_darwin
 description: iOS implementation of the local_auth plugin.
-repository: https://github.com/flutter/packages/tree/main/packages/local_auth/local_auth_ios
+repository: https://github.com/flutter/packages/tree/main/packages/local_auth/local_auth_darwin
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+local_auth%22
-version: 1.1.7
+version: 1.2.0
 
 environment:
   sdk: ^3.2.3
@@ -14,7 +14,8 @@ flutter:
     platforms:
       ios:
         pluginClass: FLTLocalAuthPlugin
-        dartPluginClass: LocalAuthIOS
+        dartPluginClass: LocalAuthDarwin
+        sharedDarwinSource: true
 
 dependencies:
   flutter:
